--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -8,14 +8,18 @@
     "dev": "npm run build && npm run start"
   },
   "dependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "ws": "^8.18.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@repo/backend-common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/ws": "^8.5.13",
-    "@repo/backend-common": "workspace:*"
+    "@types/ws": "^8.5.13"
   },
   "keywords": [],
   "author": "",
