socket logic for real time update
-users can collaborate to draw
-added typescript configuration common so that it can be used by frontend as well as backend

--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/ws": "^8.5.13"
+    "@types/ws": "^8.5.13",
+    "@repo/ts-types":"workspace:*"
   },
   "keywords": [],
   "author": "",
