create canvasRenderService with inbuilt method

--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ts-types",
+  "name": "@repo/constants",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,9 +8,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "@repo/constants":"workspace:*"
   },
   "keywords": [],
   "author": "",
