--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,8 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "typescript": "5.5.4",
-    "@repo/ts-types":"workspace:*"
+    "@repo/ts-types":"workspace:*",
+    "@repo/constants":"workspace:*"
 
   }
 }
