refactor:  refactor code for better management of shapes

--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+      
   "exports":{
     "./*":"./src/index.ts"
   },
@@ -11,6 +12,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "license": "ISC"
 }
