--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,3 +9,7 @@ jobs:
     steps:
       - name: Say Hello
         run: echo "Hello World"
+      - name: See GitHub Actions
+        run: echo "${{ github.event_name }}"
+      - name: See GitHub Context
+        run: echo "${{ toJson(github) }}"
