add: include job status output in GitHub Actions workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,3 +13,5 @@ jobs:
         run: echo "${{ github.event_name }}"
       - name: See GitHub Context
         run: echo "${{ toJson(github) }}"
+      - name: See Job Status
+        run: echo "${{ job.status }}"
