--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,8 @@ jobs:
             cd /home/ubuntu/turborepo_excelidraw
 
             echo "✅ Git Pull..."
-            git pull origin main
+            git pull origin main || echo "Git pull failed"
+
 
             echo "📦 Installing deps..."
             pnpm install
